<resources>
    <string name="app_name">SoccerArenaMobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="slogan">Organizator rozgrywek najwyższej klasy</string>
    <string name="email">E-mail:</string>
    <string name="type_email">E-mail</string>
    <string name="password">Password:</string>
    <string name="type_password">Password</string>
    <string name="name">Name:</string>
    <string name="type_name">Name</string>
    <string name="surname">Surname:</string>
    <string name="type_surname">Surname</string>

    <string name="create_account_u"><u>Create account.</u></string>
    <string name="create_account">Create account</string>

    <string name="login">Login</string>
    <string name="registration">Create an account</string>
    <string name="confirm_password">Confirm password:</string>
</resources>