<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.RegistrationFragment"
    android:background="@color/main_dark_background">

    <TextView
        android:id="@+id/title_registration_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registration"
        android:textColor="@color/additional_yellow"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/additional_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:ems="10"
        android:hint="@string/type_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label_textview" />


    <TextView
        android:id="@+id/surname_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/surname"
        android:textColor="@color/additional_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/surname_edittext"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <EditText
        android:id="@+id/surname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:ems="10"
        android:hint="@string/type_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_label_textview" />


    <TextView
        android:id="@+id/email_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/additional_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/email_edittext"
        app:layout_constraintTop_toBottomOf="@+id/surname_edittext" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:ems="10"
        android:hint="@string/type_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label_textview" />


    <TextView
        android:id="@+id/password_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/additional_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:ems="10"
        android:hint="@string/type_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label_textview" />

    <TextView
        android:id="@+id/confirm_password_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        android:textColor="@color/additional_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

    <EditText
        android:id="@+id/confirm_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:hint="@string/type_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_label_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:padding="5dp"
        android:background="@drawable/round_button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edittext" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dark_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_registration_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>